--- a/css/include/fonts.css
+++ b/css/include/fonts.css
@@ -1,56 +1,56 @@
 
 @font-face {
     font-family: 'Montserrat-Regular';
-    src: url('fonts/Montserrat-Regular.ttf');
+    src: url('../../fonts/Montserrat-Regular.ttf');
     font-style: normal;
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'Montserrat-Bold';
-    src: url('fonts/Montserrat-Bold.ttf');
+    src: url('../../fonts/Montserrat-Bold.ttf');
     font-style: normal;
     font-weight: 800;
 }
 
 @font-face {
     font-family: 'Roboto-Black';
-    src: url('fonts/Roboto-Black.ttf');
+    src: url('../../fonts/Roboto-Black.ttf');
     font-style: normal;
     font-weight: 800;
 }
 
 @font-face {
     font-family: 'Roboto-Bold';
-    src: url('fonts/Roboto-Bold.ttf');
+    src: url('../../fonts/Roboto-Bold.ttf');
     font-style: normal;
     font-weight: 800;
 }
 
 @font-face {
     font-family: 'Roboto-Medium';
-    src: url('fonts/Roboto-Medium.ttf');
+    src: url('../../fonts/Roboto-Medium.ttf');
     font-style: normal;
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'Roboto-Light';
-    src: url('fonts/Roboto-Light.ttf');
+    src: url('../../fonts/Roboto-Light.ttf');
     font-style: normal;
     font-weight: 300;
 }
 
 @font-face {
     font-family: 'Roboto-Thin';
-    src: url('fonts/Roboto-Thin.ttf');
+    src: url('../../fonts/Roboto-Thin.ttf');
     font-style: normal;
     font-weight: 100;
 }
 
 @font-face {
     font-family: 'Roboto-Regular';
-    src: url('fonts/Roboto-Regular.ttf');
+    src: url('../../fonts/Roboto-Regular.ttf');
     font-style: normal;
     font-weight: 400;
 }
