--- a/Sass/Core/mixin.scss
+++ b/Sass/Core/mixin.scss
@@ -19,8 +19,11 @@
   @else if $media == wide-handhelds {
     @media only screen and (min-width: 480px) and (max-width: 767px) { @content; }
   }
+  @else if $media == notepad {
+    @media only screen and (min-width: 768px) and (max-width: 991px) { @content; }
+  }
   @else if $media == tablets {
-    @media only screen and (min-width: 768px) and (max-width: 1439px) { @content; }
+    @media only screen and (min-width: 992px) and (max-width: 1439px) { @content; }
   }
   @else if $media == desktop {
     @media only screen and (min-width: 1450px) { @content; }
