--- a/Sass/blocks/_header.scss
+++ b/Sass/blocks/_header.scss
@@ -75,7 +75,7 @@
       width: 80%;
       margin: 10px auto;
       padding-top: 13px;
-      font: $fontSize4 $fontFamilyThin;
+      font: $fontSize4 $fontFamilyLight;
     }
 
     .findButton {
