--- a/Sass/Core/variable.scss
+++ b/Sass/Core/variable.scss
@@ -13,6 +13,7 @@ $color8 : white;  //header text h2
 $fontFamilyBold: 'Montserrat-Bold', sans-serif;
 $fontFamilyRegular: 'Montserrat-Regular', sans-serif;
 $fontFamilyThin :'Roboto-Thin', sans-serif;
+$fontFamilyLight :'Roboto-Light',sans-serif;
 $fontSize1 : 30px;
 $fontSize2 : 22px;
 $fontSize3 : 20px;
