--- a/Sass/blocks/_mediaquery.scss
+++ b/Sass/blocks/_mediaquery.scss
@@ -1,15 +1,27 @@
 /* Media query */
 /* phone  */
 @include respond-to(handhelds) {
+  //-------------- Header--------------------
   .header {
     @include background($urlPromoMobil, 0, 0);
     background-size: cover;
 
     .login_area, h1 {
       width: 100%;
-      border: solid #ff4e50;
     }
   }
+  //---------------- Slider ____________________
+
+  .wrapper_block{
+    width: 90%;
+    margin: 20px auto;
+    clear: both;
+    p {
+      width: 260px;
+    }
+  }
+
+  //----------------- Ideas -----------------------
   .grid {
     @include column-count(1);
     .grid-item img {
@@ -17,6 +29,7 @@
       height: 120px;
     }
   }
+  // ------------------- Partners --------------------
   .partners div {
     @include column-count(1);
   }
@@ -24,6 +37,7 @@
 };
 /* wide phone */
 @include respond-to(wide-handhelds) {
+  //-------------- Header--------------------
   .header {
     @include background($urlPromoMobil, 0, 0);
     background-size: cover;
@@ -32,6 +46,16 @@
       width: 100%;
     }
   }
+  //---------------- Slider ____________________
+  .wrapper_block{
+    width: 90%;
+    margin:20px auto;
+    clear: both;
+     p {
+      width: 260px;
+    }
+  }
+  //----------------- Ideas -----------------------
   .grid {
     @include column-count(1);
     .grid-item img {
@@ -39,39 +63,95 @@
       height: 120px;
     }
   }
+  //-------------- Partners ------------------------
    .partners div{
-    @include column-count(1);
+    @include column-count(2);
   }
 };
-
-@include respond-to(tablets) {
+@include respond-to(notepad) {
+  //-------------- Header--------------------
   .header {
     @include background($urlPromoTablet, 0, 0);
     background-size: cover;
-  }
+
     .login_area {
       width: 180px;
     }
-
+  }
+  //---------------- Slider ____________________
+  .wrapper_block{
+    width: 30%;
+    margin-left: 20px;
+    float: left;
+    p {
+      width: 200px;
+    }
+  }
+  //----------------- Ideas -----------------------
   .grid {
     @include column-count(3);
     .grid-item {
       height: 300px;
     }
   }
+  //------------------- Partners ----------------------
+  .partners div{
+    @include column-count(2);
+  }
+
+};
+
+@include respond-to(tablets) {
+  //-------------- Header--------------------
+  .header {
+    @include background($urlPromoTablet, 0, 0);
+    background-size: cover;
+
+    .login_area {
+      width: 180px;
+    }
+  }
+  //---------------- Slider ____________________
+  .wrapper_block{
+    width: 30%;
+    margin-left: 20px;
+    float: left;
+    p {
+      width: 200px;
+    }
+  }
+  //----------------- Ideas -----------------------
+  .grid {
+    @include column-count(3);
+    .grid-item {
+      height: 300px;
+    }
+  }
+  //------------------- Partners ----------------------
   .partners div{
     @include column-count(4);
   }
 
 };
 @include respond-to(desktop) {
+  //-------------- Header--------------------
   .header {
     @include background($urlPromoTablet, 0, 0);
-  }
+
     .login_area {
       width: 180px;
     }
-
+  }
+  //---------------- Slider ____________________
+  .wrapper_block{
+    width: 30%;
+    margin-left: 20px;
+    float: left;
+    p {
+      width: 200px;
+    }
+  }
+  //----------------- Ideas -----------------------
   .idea {
     width: 1260px;
   }
@@ -81,6 +161,7 @@
       height: 300px;
     }
   }
+  //--------------------- Partners ----------------
   .partners div{
     @include column-count(4);
   }
