--- a/Sass/blocks/_partners.scss
+++ b/Sass/blocks/_partners.scss
@@ -15,13 +15,14 @@
   figure {
     margin: auto;
     position: relative;
-    width: 215px;
+    width: 220px;
+    height: 240px;
     text-align: center;
   }
 
   figcaption {
     color: $color4;
-    font: $fontSize5 $fontFamilyBold;
+    font: $fontSize5 $fontFamilyLight;
   }
 
   img {
