--- a/Sass/blocks/_slider.scss
+++ b/Sass/blocks/_slider.scss
@@ -10,43 +10,36 @@
   .carousel_wrapper {
     position: relative;
     margin: 20px auto;
-    /*  padding: 10px; */
-    width: 100%;
-    max-width: 930px;
-    /*   border: solid $color1;*/
+    width: 98%;
+    max-width: 938px;
 
     .wrapper_block {
       position: relative;
       box-sizing: border-box;
-      margin-left: 10px;
-      width: 32%;
+      max-width: 460px;
       min-width: 230px;
-      float: left;
       height: 400px;
       overflow: hidden;
-      /*  border: solid $color2; */
+      border-radius: 2%;
 
       ul {
         position: relative;
-        width: 1000px;
+        width:2000px;
         height: 400px;
-        /*  border: solid #f0c45c;*/
 
         li {
           position: relative;
           display: inline-block;
-          width: 300px;
+          width: 30%;
           height: 100%;
           float: left;
           list-style: none;
-          /*  background-color: $color1; */
 
           span {
             position: absolute;
             display: block;
-            left: 10px;
+            left: 20px;
             bottom: 10px;
-            /*  border: solid $color7; */
 
             .step_link {
               display: block;
@@ -71,8 +64,8 @@
             p {
               padding-top: 20px;
               display: block;
-              width: 260px;
-              font-family: $fontSize5 $fontFamilyThin;
+            /*  width: 260px; */
+              font: $fontSize5 $fontFamilyLight;
               line-height: 16px;
               color: $color8;
             }
