--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     background: url("../img/promo_mobil.jpg") 0 0 no-repeat;
     background-size: cover; }
     .header .login_area, .header h1 {
-      width: 100%;
-      border: solid #ff4e50; }
+      width: 100%; }
+
+  .wrapper_block {
+    width: 90%;
+    margin: 20px auto;
+    clear: both; }
+    .wrapper_block p {
+      width: 260px; }
 
   .grid {
     -moz-column-count: 1;
@@ -51,8 +57,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     background: url("../img/promo_mobil.jpg") 0 0 no-repeat;
     background-size: cover; }
     .header .login_area, .header h1 {
-      width: 100%;
-      border: solid #4d78ff; }
+      width: 100%; }
+
+  .wrapper_block {
+    width: 90%;
+    margin: 20px auto;
+    clear: both; }
+    .wrapper_block p {
+      width: 260px; }
 
   .grid {
     -moz-column-count: 1;
@@ -63,17 +75,47 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
       height: 120px; }
 
   .partners div {
-    -moz-column-count: 1;
-    -webkit-column-count: 1;
-    column-count: 1; } }
-@media only screen and (min-width: 768px) and (max-width: 1439px) {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2; } }
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .header {
     background: url("../img/promo_tablet.jpg") 0 0 no-repeat;
     background-size: cover; }
+    .header .login_area {
+      width: 180px; }
 
-  .login_area {
-    width: 180px;
-    border: solid #ecff71; }
+  .wrapper_block {
+    width: 30%;
+    margin-left: 20px;
+    float: left; }
+    .wrapper_block p {
+      width: 200px; }
+
+  .grid {
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3; }
+    .grid .grid-item {
+      height: 300px; }
+
+  .partners div {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2; } }
+@media only screen and (min-width: 992px) and (max-width: 1439px) {
+  .header {
+    background: url("../img/promo_tablet.jpg") 0 0 no-repeat;
+    background-size: cover; }
+    .header .login_area {
+      width: 180px; }
+
+  .wrapper_block {
+    width: 30%;
+    margin-left: 20px;
+    float: left; }
+    .wrapper_block p {
+      width: 200px; }
 
   .grid {
     -moz-column-count: 3;
@@ -89,10 +131,15 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 @media only screen and (min-width: 1450px) {
   .header {
     background: url("../img/promo_tablet.jpg") 0 0 no-repeat; }
+    .header .login_area {
+      width: 180px; }
 
-  .login_area {
-    width: 180px;
-    border: solid #faff96; }
+  .wrapper_block {
+    width: 30%;
+    margin-left: 20px;
+    float: left; }
+    .wrapper_block p {
+      width: 200px; }
 
   .idea {
     width: 1260px; }
@@ -163,7 +210,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
       width: 80%;
       margin: 10px auto;
       padding-top: 13px;
-      font: 18px "Roboto-Thin", sans-serif; }
+      font: 18px "Roboto-Light", sans-serif; }
     .header .promo .findButton {
       margin: 5px auto;
       padding-top: 10px;
@@ -186,39 +233,32 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .how_it_works .carousel_wrapper {
   position: relative;
   margin: 20px auto;
-  /*  padding: 10px; */
-  width: 100%;
-  max-width: 930px;
-  /*   border: solid $color1;*/ }
+  width: 98%;
+  max-width: 938px; }
   .how_it_works .carousel_wrapper .wrapper_block {
     position: relative;
     box-sizing: border-box;
-    margin-left: 10px;
-    width: 32%;
+    max-width: 460px;
     min-width: 230px;
-    float: left;
     height: 400px;
     overflow: hidden;
-    /*  border: solid $color2; */ }
+    border-radius: 2%; }
     .how_it_works .carousel_wrapper .wrapper_block ul {
       position: relative;
-      width: 1000px;
-      height: 400px;
-      /*  border: solid #f0c45c;*/ }
+      width: 2000px;
+      height: 400px; }
       .how_it_works .carousel_wrapper .wrapper_block ul li {
         position: relative;
         display: inline-block;
-        width: 300px;
+        width: 30%;
         height: 100%;
         float: left;
-        list-style: none;
-        /*  background-color: $color1; */ }
+        list-style: none; }
         .how_it_works .carousel_wrapper .wrapper_block ul li span {
           position: absolute;
           display: block;
-          left: 10px;
-          bottom: 10px;
-          /*  border: solid $color7; */ }
+          left: 20px;
+          bottom: 10px; }
           .how_it_works .carousel_wrapper .wrapper_block ul li span .step_link {
             display: block;
             width: 70px;
@@ -240,8 +280,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
           .how_it_works .carousel_wrapper .wrapper_block ul li span p {
             padding-top: 20px;
             display: block;
-            width: 260px;
-            font-family: 14px "Roboto-Thin", sans-serif;
+            /*  width: 260px; */
+            font: 14px "Roboto-Light", sans-serif;
             line-height: 16px;
             color: white; }
     .how_it_works .carousel_wrapper .wrapper_block .one {
@@ -285,11 +325,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .partners figure {
   margin: auto;
   position: relative;
-  width: 215px;
+  width: 220px;
+  height: 240px;
   text-align: center; }
 .partners figcaption {
   color: #666666;
-  font: 14px "Montserrat-Bold", sans-serif; }
+  font: 14px "Roboto-Light", sans-serif; }
 .partners img {
   border-radius: 70px; }
 .partners span {
