--- a/Sass/blocks/_ideas.scss
+++ b/Sass/blocks/_ideas.scss
@@ -5,7 +5,7 @@
 .ideas {
   width: 98%;
   margin: 0 auto;
-
+  max-width: 940px;
   h1 {
     margin-bottom: 10px;
     color: $color3;
@@ -13,18 +13,21 @@
     text-align: center;
   }
 
-
   .grid {
     margin: 0 auto;
+    opacity:0;
+    transition:opacity 0.5s linear;
 
-    //  .grid-sizer,
-    //  .grid-item {
-    //   width: 31%;
-    //  }
+     .grid-gutter {
+      width: 15px;
+    }
 
       .grid-item {
         padding: 2px;
         margin-bottom: 15px;
+        transition-property: top;
+        transition-property: left;
+        transition-duration: 3s;
 
         a {
           position: absolute;
