--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     .wrapper_block p {
       width: 260px; }
 
-  .grid-sizer,
-  .grid-item {
-    width: 90%; }
-
   .partners div {
     -moz-column-count: 1;
     -webkit-column-count: 1;
@@ -69,10 +65,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     .wrapper_block p {
       width: 260px; }
 
-  .grid-sizer,
-  .grid-item {
-    width: 80%; }
-
   .partners div {
     -moz-column-count: 2;
     -webkit-column-count: 2;
@@ -97,10 +89,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     float: left; }
     .wrapper_block p {
       width: 200px; }
-
-  .grid-sizer,
-  .grid-item {
-    width: 48%; }
 
   .partners div {
     -moz-column-count: 2;
@@ -130,10 +118,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     .wrapper_block p {
       width: 200px; }
 
-  .grid-sizer,
-  .grid-item {
-    width: 31%; }
-
   .partners div {
     -moz-column-count: 4;
     -webkit-column-count: 4;
@@ -160,13 +144,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     float: left; }
     .wrapper_block p {
       width: 200px; }
-
-  .idea {
-    width: 1260px; }
-
-  .grid-sizer,
-  .grid-item {
-    width: 31%; }
 
   .partners div {
     -moz-column-count: 4;
@@ -384,17 +361,25 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 .ideas {
   width: 98%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  max-width: 940px; }
   .ideas h1 {
     margin-bottom: 10px;
     color: #333333;
     font: 22px "Montserrat-Bold", sans-serif;
     text-align: center; }
   .ideas .grid {
-    margin: 0 auto; }
+    margin: 0 auto;
+    opacity: 0;
+    transition: opacity 0.5s linear; }
+    .ideas .grid .grid-gutter {
+      width: 15px; }
     .ideas .grid .grid-item {
       padding: 2px;
-      margin-bottom: 15px; }
+      margin-bottom: 15px;
+      transition-property: top;
+      transition-property: left;
+      transition-duration: 3s; }
       .ideas .grid .grid-item a {
         position: absolute;
         top: 43%;
