--- a/Sass/blocks/_slider.scss
+++ b/Sass/blocks/_slider.scss
@@ -24,14 +24,13 @@
 
       ul {
         position: relative;
-        width:2000px;
-        height: 400px;
+
+     //   height: 400px;
 
         li {
           position: relative;
-          display: inline-block;
-          width: 30%;
-          height: 100%;
+      //    width: 33%;
+          height:400px;
           float: left;
           list-style: none;
 
