--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     clear: both; }
     .wrapper_block p {
       width: 260px; }
+    .wrapper_block li {
+      width: 100%;
+      display: block; }
 
   .partners div {
     -moz-column-count: 1;
@@ -64,6 +67,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     clear: both; }
     .wrapper_block p {
       width: 260px; }
+    .wrapper_block li {
+      width: 100%;
+      display: block; }
 
   .partners div {
     -moz-column-count: 2;
@@ -89,6 +95,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     float: left; }
     .wrapper_block p {
       width: 200px; }
+    .wrapper_block li {
+      width: 33%;
+      display: inline-block; }
 
   .partners div {
     -moz-column-count: 2;
@@ -115,8 +124,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     width: 30%;
     margin-left: 20px;
     float: left; }
+    .wrapper_block ul {
+      width: 848px; }
     .wrapper_block p {
       width: 200px; }
+    .wrapper_block li {
+      width: 33%;
+      display: inline-block; }
 
   .partners div {
     -moz-column-count: 4;
@@ -142,8 +156,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     width: 30%;
     margin-left: 20px;
     float: left; }
+    .wrapper_block ul {
+      width: 848px; }
     .wrapper_block p {
       width: 200px; }
+    .wrapper_block li {
+      width: 33%;
+      display: inline-block; }
 
   .partners div {
     -moz-column-count: 4;
@@ -248,14 +267,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     overflow: hidden;
     border-radius: 2%; }
     .how_it_works .carousel_wrapper .wrapper_block ul {
-      position: relative;
-      width: 2000px;
-      height: 400px; }
+      position: relative; }
       .how_it_works .carousel_wrapper .wrapper_block ul li {
         position: relative;
-        display: inline-block;
-        width: 30%;
-        height: 100%;
+        height: 400px;
         float: left;
         list-style: none; }
         .how_it_works .carousel_wrapper .wrapper_block ul li span {
